Changed lots of "new Integer()" to "Integer.valueOf()" (FindBugs report)
git-svn-id: svn://svn.berlios.de/ecg/trunk@1074 3537aeea-94f2-0310-a3c2-ed66167d6be7